# crowdfund_backend

./: README.md  pyproject.toml  requirements.txt  test.db
app/: auth.py  database.py  routes.py  schemas.py
